[package]
name = "largetable"
version = "0.1.0"
authors = ["Colin Merkel <colin.merkel@gmail.com>"]

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
linefeed = "0.2.2"
glob = "0.2"
regex = "0.2"
byteorder = "1"

[dependencies.nickel]
version = "*"

[[bin]]
name = "largetable"
path = "src/main.rs"

[[bin]]
name = "largetable-cli"
path = "src/cli.rs"
