[package]
name = "largetable"
version = "0.1.3"
authors = ["Colin Merkel <colin.merkel@gmail.com>"]

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
serde = "0.9"
serde_json = "0.9"
serde_yaml = "0.6"
serde_derive = "0.9"
linefeed = "0.2.2"
glob = "0.2"
regex = "0.2"
byteorder = "1"
time = "0.1"
rand = "0.3"
clippy = {version = "*", optional = true}
hyper = "0.10.0"
getopts = "0.2"
log = "0.3.6"

[features]
default = []

[lib]
name = "largeclient"
path = "src/client.rs"

[[bin]]
name = "largetable"
path = "src/main.rs"

[[bin]]
name = "largetable-cli"
path = "src/cli.rs"
